# AuthNode

./: .gitignore  README.md  README.zh-CN.md  authnode.example.json  pyproject.toml  start.sh
authnode/: __init__.py  __main__.py  catalog.py  cli.py  config.py  contract.py  identity.py  jwt.py  oidc.py  server.py
contracts/: authnode-fastreact-pska.md  pska-coding-agent-authnode-prompt.md
tests/: test_authnode.py
